<resources>
    <string name="app_name">PBP - Android-DAO</string>
    <string name="tambahGedung">Tambah Gedung</string>
    <string name="tambahRuangan">Tambah Ruangan</string>
    <string name="nama_gedung">Nama Gedung</string>
    <string name="insert">Insert Gedung</string>
    <string name="kode_gedung">Kode Gedung</string>
    <string name="kode_ruang">Kode Ruang</string>
    <string name="nama_ruang">Nama Ruang</string>
    <string name="insert_ruang">Insert Ruang</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="pilih_gedung">Pilih Gedung</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="batal">Batal</string>
    <string name="daftar_ruang">Daftar Ruang</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
</resources>