<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <EditText
        android:id="@+id/namaRuang"
        android:layout_width="319dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nama_ruang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/kodeRuang"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/kode_ruang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaRuang" />

    <EditText
        android:id="@+id/kapasitas"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/kapasitas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kodeRuang" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTambahRuang"
        android:prompt="@string/pilih_gedung"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kapasitas" />

    <Button
        android:id="@+id/insertRuangButton"
        android:layout_width="319dp"
        android:layout_height="47dp"
        android:text="@string/insert_ruang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTambahRuang"

        />


</androidx.constraintlayout.widget.ConstraintLayout>