<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/tvUbahData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ubah_data"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editKodeRuang"
        android:layout_width="317dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/kode_ruang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUbahData" />


    <EditText
        android:id="@+id/editNamaRuang"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textShortMessage"
        android:hint="@string/nama_ruang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editKodeRuang" />

    <EditText
        android:id="@+id/editKapasitas"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/kapasitas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNamaRuang" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEditRuang"
        android:prompt="@string/pilih_gedung"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editKapasitas" />

    <Button
        android:id="@+id/btnUbahData"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/ubah_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditRuang"

        />

    <Button
        android:id="@+id/btnBatal"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/batal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditRuang"

        />

</androidx.constraintlayout.widget.ConstraintLayout>