<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/tambahGedungForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambahGedung"
            tools:layout_editor_absoluteX="56dp"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/tambahRuanganForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambahRuangan"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="67dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/kodeRuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Kode Ruang"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/namaRuang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Nama Ruang" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/kapasitas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Kapasitas" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinnerPilihGedung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/gedung"
            android:prompt="@string/pilih_gedung"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/insertGedungButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Insert Ruang"
            />
    </LinearLayout>


</LinearLayout>